--- a/cashcard/build.gradle
+++ b/cashcard/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	implementation 'org.springframework.data:spring-data-jdbc'
-	testImplementation 'com.h2database:h2'
+	testImplementation group: 'com.h2database', name: 'h2', version: '2.2.224'
 }
 
 tasks.named('test') {
